# EZ-Stretch-BSC

./: .gitignore  CLAUDE.md  README.md
BayesianAstro/cpp/: CMakeLists.txt
BayesianAstro/cpp/include/: BayesianAstroInterface.h
BayesianAstro/cpp/src/: BayesianAstroInstance.cpp  BayesianAstroInterface.cpp  BayesianAstroModule.cpp  BayesianAstroProcess.cpp
BayesianAstro/julia/: Manifest.toml  Project.toml
BayesianAstro/julia/src/: BayesianAstro.jl
BayesianAstro/julia/src/gpu/: Kernels.jl
BayesianAstro/julia/src/io/: FitsIO.jl
BayesianAstro/julia/src/visualization/: ConfidenceMaps.jl
BayesianAstro/julia/test/: runtests.jl
BayesianAstro/ui/src/components/: FileList.tsx  ParameterPanel.tsx  ProgressPanel.tsx
BayesianAstro/ui/src/hooks/: useBridge.ts
repository/: updates.xri
src/scripts/EZ Stretch BSC/: EZDonutRepair.js  EZDonutRepair.xsgn  EZStretch.js  EZStretch.xsgn
src/scripts/EZ Stretch BSC/LuptonRGB/: LuptonRGB.xsgn
src/scripts/EZ Stretch BSC/PhotometricStretch/: PhotometricStretch.js  PhotometricStretch.xsgn
src/scripts/EZ Stretch BSC/RNC-ColorStretch/: RNC-ColorStretch.js  RNC-ColorStretch.xsgn
tools/: CLICodeSign.js  CLICodeSign.xsgn  DumpKeys.js  build-packages.sh  pi_codesign.py  sign-scripts.sh  sign.sh
